--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/core": "~4.0.0",
     "@angular/forms": "~4.0.0",
     "@angular/http": "~4.0.0",
+    "@angular/material": "^2.0.0-beta.3",
     "@angular/platform-browser": "~4.0.0",
     "@angular/platform-browser-dynamic": "~4.0.0",
     "@angular/platform-server": "~4.0.0",
@@ -38,6 +39,7 @@
     "@types/node": "^6.0.45",
     "angular2-template-loader": "^0.6.2",
     "awesome-typescript-loader": "^3.1.3",
+    "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.0",
     "file-loader": "^0.11.1",
     "html-loader": "^0.4.5",
@@ -50,6 +52,7 @@
     "tslint-eslint-rules": "^4.0.0",
     "typescript": "^2.3.2",
     "webpack": "^2.4.1",
+    "webpack-chunk-hash": "^0.4.0",
     "webpack-dev-server": "^2.4.5"
   },
   "repository": {}
