--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "GProst aka German Prostakov <gprostmail@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@angular/animations": "^4.1.1",
     "@angular/common": "~4.0.0",
     "@angular/compiler": "~4.0.0",
     "@angular/compiler-cli": "~4.0.0",
@@ -25,6 +26,7 @@
     "@angular/upgrade": "~4.0.0",
     "angular-in-memory-web-api": "~0.3.1",
     "core-js": "^2.4.1",
+    "normalize.css": "^7.0.0",
     "rxjs": "5.0.1",
     "zone.js": "^0.8.4"
   },
@@ -41,9 +43,12 @@
     "awesome-typescript-loader": "^3.1.3",
     "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.0",
+    "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
+    "node-sass": "^4.5.2",
+    "sass-loader": "^6.0.3",
     "style-loader": "^0.17.0",
     "tslint": "^3.15.1",
     "tslint-eslint-rules": "^4.0.0",
