--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "cd src && webpack-dev-server --progress",
     "lint": "tslint ./src/**/*.ts -t verbose"
   },
+  "pre-commit": "lint",
   "keywords": [],
   "author": "GProst aka German Prostakov <gprostmail@gmail.com>",
   "license": "MIT",
@@ -48,6 +49,7 @@
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
     "node-sass": "^4.5.2",
+    "pre-commit": "^1.2.2",
     "sass-loader": "^6.0.3",
     "style-loader": "^0.17.0",
     "tslint": "^3.15.1",
