--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "html-webpack-plugin": "^2.28.0",
     "node-sass": "^4.5.2",
     "pre-commit": "^1.2.2",
+    "raw-loader": "^0.5.1",
     "sass-loader": "^6.0.3",
     "style-loader": "^0.17.0",
     "tslint": "^3.15.1",
