--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "gprost.com",
-  "version": "0.1.0",
+  "version": "9.99.999",
   "description": "German Prostakov blog",
+  "homepage": "https://github.com/GProst/for-fun",
   "scripts": {
     "start": "cd src && webpack-dev-server --progress",
     "lint": "tslint -c ./tslint.json ./src/**/*.ts -t verbose --type-check --project ./src/tsconfig.json"
@@ -9,8 +10,11 @@
   "pre-commit": [
     "lint"
   ],
-  "keywords": [],
-  "author": "GProst aka German Prostakov <gprostmail@gmail.com>",
+  "keywords": [
+    "awesome",
+    "GProst"
+  ],
+  "author": "GProst a.k.a. German Prostakov <gprostmail@gmail.com>",
   "license": "MIT",
   "dependencies": {
     "@angular/animations": "^4.1.1",
@@ -44,7 +48,6 @@
     "@types/angular-route": "^1.3.2",
     "@types/angular-sanitize": "^1.3.3",
     "@types/node": "^6.0.45",
-    "angular2-template-loader": "^0.6.2",
     "awesome-typescript-loader": "^3.1.3",
     "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.0",
@@ -64,5 +67,11 @@
     "webpack-chunk-hash": "^0.4.0",
     "webpack-dev-server": "^2.4.5"
   },
-  "repository": {}
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/GProst/for-fun"
+  },
+  "bugs": {
+    "url": "https://github.com/GProst/for-fun/issues"
+  }
 }
