--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "lodash-es": "^4.17.4",
     "normalize.css": "^7.0.0",
     "rxjs": "5.0.1",
+    "webfontloader": "^1.6.27",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
