--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
+    "@ngtools/webpack": "^1.3.1",
     "@types/angular": "^1.5.16",
     "@types/angular-animate": "^1.5.5",
     "@types/angular-cookies": "^1.4.2",
