--- a/src/tsconfig.production.json
+++ b/src/tsconfig.production.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "module": "commonjs",
+    "module": "es2015",
     "moduleResolution": "node",
     "sourceMap": true,
     "emitDecoratorMetadata": true,
@@ -13,9 +13,8 @@
       "../node_modules/@types/"
     ]
   },
-  "compileOnSave": true,
-  "exclude": [
-    "node_modules/*",
-    "**/*-aot.ts"
-  ]
+  "angularCompilerOptions": {
+    "genDir": "aot",
+    "entryModule": "app/app.module#AppModule"
+  }
 }
