--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/angular-route": "^1.3.2",
     "@types/angular-sanitize": "^1.3.3",
     "@types/node": "^6.0.45",
+    "angular2-template-loader": "^0.6.2",
     "awesome-typescript-loader": "^3.1.3",
     "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.0",
