--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/angular-sanitize": "^1.3.3",
     "@types/node": "^6.0.45",
     "angular2-template-loader": "^0.6.2",
+    "autoprefixer": "^7.1.1",
     "awesome-typescript-loader": "^3.1.3",
     "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.0",
@@ -60,6 +61,7 @@
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
     "node-sass": "^4.5.2",
+    "postcss-loader": "^2.0.5",
     "pre-commit": "^1.2.2",
     "raw-loader": "^0.5.1",
     "sass-loader": "^6.0.3",
