--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://github.com/GProst/for-fun",
   "scripts": {
     "start": "cd src && webpack-dev-server --progress",
+    "build": "cd src && NODE_ENV=production && webpack -p",
     "lint": "tslint -c ./tslint.json ./src/**/*.ts -t verbose --type-check --project ./src/tsconfig.json"
   },
   "pre-commit": [
