--- a/package.json
+++ b/package.json
@@ -19,21 +19,21 @@
   "license": "MIT",
   "dependencies": {
     "@angular/animations": "^4.1.1",
-    "@angular/common": "~4.0.0",
-    "@angular/compiler": "~4.0.0",
-    "@angular/compiler-cli": "~4.0.0",
-    "@angular/core": "~4.0.0",
-    "@angular/forms": "~4.0.0",
-    "@angular/http": "~4.0.0",
+    "@angular/common": "^4.0.0",
+    "@angular/compiler": "^4.0.0",
+    "@angular/compiler-cli": "^4.0.0",
+    "@angular/core": "^4.0.0",
+    "@angular/forms": "^4.0.0",
+    "@angular/http": "^4.0.0",
     "@angular/material": "^2.0.0-beta.3",
-    "@angular/platform-browser": "~4.0.0",
-    "@angular/platform-browser-dynamic": "~4.0.0",
-    "@angular/platform-server": "~4.0.0",
-    "@angular/router": "~4.0.0",
-    "@angular/tsc-wrapped": "~4.0.0",
-    "@angular/upgrade": "~4.0.0",
+    "@angular/platform-browser": "^4.0.0",
+    "@angular/platform-browser-dynamic": "^4.0.0",
+    "@angular/platform-server": "^4.0.0",
+    "@angular/router": "^4.0.0",
+    "@angular/tsc-wrapped": "^4.0.0",
+    "@angular/upgrade": "^4.0.0",
     "@types/lodash-es": "^4.14.5",
-    "angular-in-memory-web-api": "~0.3.1",
+    "angular-in-memory-web-api": "^0.3.1",
     "core-js": "^2.4.1",
     "lodash-es": "^4.17.4",
     "normalize.css": "^7.0.0",
